# PureLauncher

./: .babelrc  .eslintrc.json  .gitignore  .npmrc  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  binding.gyp  downloads.html  index.html  index.js  package-lock.json  package.json  tsconfig.json  tslint.json
.github/workflows/: release.yml  test.yml  translation.yml
app/: main.js  package-lock.json  package.json
lang/: ru.json  zh-cn.json
langs/: zh-cn.json
native/: Cargo.toml  build.rs
native/src/: index.cc  lib.rs
scripts/: sync-release.sh
src/: App.tsx  SideBar.tsx  azure-pipelines.yml  constants.ts  createServer.ts  custom.css  globals.d.ts  i18n.ts  index.css  index.js  index.tsx  main.ts  minecraft.css  side-bar.less  useRoute.tsx  util.ts
src/assets/: iconfont.css
src/components/: Avatar.tsx  Dots.tsx  Dropdown.tsx  Empty.tsx  ErrorHandler.ts  IconButton.tsx  IconPicker.tsx  InstallList.tsx  LiveRoute.tsx  Loading.tsx  LoginDialog.tsx  Profile.tsx  ShowMore.tsx  Switch.tsx  VersionSelector.tsx  VersionSwitch.tsx  avatar.css  dots.less  dropdown.less  empty.less  icon-button.css  icon-picker.css  install-list.less  loading.less  login-dialog.less  profile.less  show-more.less  switch.less  version-switch.less
src/models/: DownloadsModel.ts  GameModel.ts  GameStore.ts  ProfilesModel.ts  ProfilesStore.ts  index.ts  index.tsx
src/plugin/: Authenticator.ts  DownloadProviders.ts  Plugin.ts  exports.ts  index.ts  logins.ts
src/protocol/: check-update.ts  exporter.ts  index.ts  (+5 more)
static/: serverHomePreload.js
unpacked/: createShortcut.js
(+69 files in other folders)
